fixed view height and temporarily suspended dark mode

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -14,7 +14,6 @@ body {
   }
   
   .blog-container{
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
