--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -17,7 +17,6 @@ body {
   .projects-wrapper {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Set the height to 100% of the viewport height */
   }
 
   .projects-container {
